# QTViewer

./: README.md
ShowImages/: CMakeLists.txt  ShowImages.pro  loadfilenamesbckgrnd.cpp  loadfilenamesbckgrnd.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  processimage.cpp  processimage.h
